--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jspdf": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-share": "^5.2.1",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
